--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.2",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "@types/body-parser": "^1.17.1",
+    "@types/cookie-session": "^2.0.37",
+    "@types/express": "^4.17.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
